# DataSloth-Data-Analysis-AI-Agent

./: README.md  pyproject.toml
data_analysis_agent/: app.py  chains.py  llms.py  prompts.py  utils.py
data_analysis_agent/experiments/: app_v0.py
data_analysis_agent/tables/: product_quality_summary.csv  summary_table.csv
